# reggie2.0

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTORS.md  README.md  analysis.py  analyze_functions.py  args_parser.py  check.py  combinations.py  externalcommand.py  gitlab_ci.py  gitlab_ci_tools.py  outputdirectory.py  pyproject.toml  reggie.py  summary.py  tools.py
.githooks/: pre-commit
.gitlab/merge_request_templates/: Bug.md  Feature.md
gitlab_ci/: gitlab_ci.py  gitlab_ci_tools.py  settings.py
reggie/: __init__.py  analysis.py  analyze_functions.py  args_parser.py  check.py  combinations.py  externalcommand.py  outputdirectory.py  reggie.py  summary.py  tags  tools.py
reggie/repas/: repas.py  repas_tools.py  settings.py
repas/: repas.py  repas_tools.py  settings.py
